Version 2.03.12 - 
===================================
  Allocation prints better error when metadata cannot fit on a single PV.
  Pvmove can better resolve full thin-pool tree move.
  Limit pool metadata spare to 16GiB.
  Improves convertsion and allocation of pool metadata.
  Support thin pool metadata 15.88GiB, adds 64MiB, thin_pool_crop_metadata=0.
  Enhance lvdisplay to report raid availiable/partial.
  Support online rename of VDO pools.
  Imporove removal of pmspare when last pool is removed.
  Fix problem with wiping of converted LVs.
  Fix memleak in scanning  (2.03.11).
  Fix corner case allocation for thin-pools.

Version 2.03.11 - 08th January 2021
===================================
  Fix pvck handling MDA at offset different from 4096.
  Partial or degraded activation of writecache is not allowed.
  Enhance error handling for fsadm and hanled correct fsck result.
  Dmeventd lvm plugin ignores higher reserved_stack lvm.conf values.
  Support using BLKZEROOUT for clearing devices.
  Support interruption when wipping LVs.
  Support interruption for bcache waiting.
  Fix bcache when device has too many failing writes.
  Fix bcache waiting for IO completion with failing disks.
  Configure use own python path name order to prefer using python3.
  Add configure --enable-editline support as an alternative to readline.
  Enhance reporting and error handling when creating thin volumes.
  Enable vgsplit for VDO volumes.
  Lvextend of vdo pool volumes ensure at least 1 new VDO slab is added.
  Use revert_lv() on reload error path after vg_revert().
  Configure --with-integrity enabled.
  Restore lost signal blocking while VG lock is held.
  Improve estimation of needed extents when creating thin-pool.
  Use extra 1% when resizing thin-pool metadata LV with --use-policy.
  Enhance --use-policy percentage rounding.
  Configure --with-vdo and --with-writecache as internal segments.
  Improving VDO man page examples.
  Allow pvmove of writecache origin.